--- a/themes/ahbeeweb-theme/layouts/_partials/header.html
+++ b/themes/ahbeeweb-theme/layouts/_partials/header.html
@@ -22,16 +22,18 @@
     </ul>
   </nav>
 
-  <!-- Toggle script -->
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      const hamburger = document.querySelector(".hamburger");
-      const menu = document.querySelector(".menu");
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const hamburger = document.querySelector(".hamburger");
+        const menu = document.querySelector(".menu");
 
-      hamburger.addEventListener("click", () => {
-        hamburger.classList.toggle("active");
-        menu.classList.toggle("active");
+        if (hamburger && menu) {
+          hamburger.addEventListener("click", () => {
+            hamburger.classList.toggle("active");
+            menu.classList.toggle("active");
+          });
+        }
       });
-    });
-  </script>
+    </script>
+
 </header>
